--- a/projeto-plp.cabal
+++ b/projeto-plp.cabal
@@ -77,6 +77,11 @@ executable projeto-plp
     other-modules: Login
     other-modules: LoginService
     other-modules: AulaService
+    other-modules: Funcionario
+    other-modules: MaquinaService
+    other-modules: Maquina
+    other-modules: Manager
+    other-modules: ManagerService
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -90,6 +95,7 @@ executable projeto-plp
     build-depends:    mime-mail
     build-depends:    text
     build-depends:    split == 0.2.5
+    build-depends:    split >= 0.2 && < 0.3,
     build-depends:    aeson >= 1.5
     build-depends:    directory >= 1.3 && < 1.4
     build-depends:    http-conduit
