--- a/projeto-plp.cabal
+++ b/projeto-plp.cabal
@@ -94,6 +94,7 @@ executable projeto-plp
     build-depends:    directory >= 1.3 && < 1.4
     build-depends:    http-conduit
     build-depends:    bytestring >= 0.10 && < 0.12
+    build-depends:    time
     -- Directories containing source files.
     hs-source-dirs:   haskell
 
