--- a/projeto-plp.cabal
+++ b/projeto-plp.cabal
@@ -98,7 +98,7 @@ executable projeto-plp
     build-depends:    split >= 0.2 && < 0.3,
     build-depends:    aeson >= 1.5
     build-depends:    directory >= 1.3 && < 1.4
-    build-depends:    http-conduit
+    --build-depends:    http-conduit
     build-depends:    bytestring >= 0.10 && < 0.12
     build-depends:    time
     -- Directories containing source files.
